# nlp-heatmap-api

./: README.md  pyproject.toml
nlp_heatmap_api/: heatmapper.ipynb
